--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+@font-face {
+    font-family: neu;
+    src: url(./NeueHaasDisplayMediu.ttf);
+}
+
+@font-face {
+    font-family: neu;
+    font-weight: 100;
+    src: url(./NeueHaasDisplayLight.ttf);
+}
+
+@font-face {
+    font-family: neu;
+    font-weight: 200;
+    src: url(./NeueHaasDisplayRoman.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "neu";
 }
 
 html,
@@ -11,13 +29,14 @@ body {
 }
 
 #page1 {
-    height: 100vh;
+    min-height: 100vh;
     background-color: #efeae3;
     position: relative;
+    padding: 0 2vw;
 }
 
 nav {
-    padding: 2vw 3vw;
+    padding: 2vw 0vw;
     width: 100%;
     display: flex;
     align-items: center;
@@ -31,40 +50,127 @@ nav {
     gap: 1vw;
 }
 
-#nav-part2 h4{
+#nav-part2 h4 {
     padding: 10px 20px;
-    border: 1px solid #8a8a8a89;
+    border: 1px solid #00000089;
     border-radius: 50px;
     font-weight: 500;
     color: #000000bb;
     position: relative;
     font-size: 18px;
+    transition: all ease 0.4s;
+    overflow: hidden;
 }
 
-#nav-part2 h4::after{
+#nav-part2 h4::after {
     content: " ";
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: black; 
+    background-color: black;
     left: 0;
     bottom: -100%;
     border-radius: 50%;
-    transition: all ease 0.3s ;
+    transition: all ease 0.4s;
 }
 
-#nav-part2 h4:hover::after{
+#nav-part2 h4:hover::after {
     bottom: 0;
     border-radius: 0;
 }
 
-#nav-part2 h4 a{
+#nav-part2 h4 a {
     text-decoration: none;
     color: #000000bb;
     z-index: 9;
     position: relative;
 }
 
-#nav-part2 h4:hover a{
+#nav-part2 h4:hover a {
     color: white;
+}
+
+#center {
+    height: 65vh;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    border-bottom: 1px solid #0000003c;
+    padding-bottom: 2.5vw;
+}
+
+#left h3 {
+    width: 25vw;
+    font-size: 1.8vw;
+    line-height: 2vw;
+}
+
+#center h1 {
+    font-size: 10vw;
+    line-height: 8vw;
+    text-align: right;
+}
+
+#page1 video {
+    width: 100%;
+    border-radius: 30px;
+    margin-top: 5vw;
+}
+
+#hero-shape {
+    position: absolute;
+    width: 46vw;
+    height: 36vw;
+    right: 0;
+    top: 65vh;
+}
+
+#hero-1 {
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    background-color: #fe320a;
+    filter: blur(20px);
+    position: absolute;
+
+
+}
+
+#hero-2 {
+    height: 30vw;
+    width: 30vw;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    background-color: #fe320a;
+    filter: blur(20px);
+    border-radius: 50%;
+    position: absolute;
+}
+
+#hero-3 {
+    height: 30vw;
+    width: 30vw;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    background-color: #fe320a;
+    filter: blur(20px);
+    border-radius: 50%;
+    position: absolute;
+    animation-name: anime1;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+
+}
+
+@keyframes anime1 {
+    from{
+        transform: translate(-10%,10%);
+    }
+    to{
+        transform: translate(10%,-10%);
+    }
 }
